--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "ace-diff": "^3.0.3",
+    "bootstrap": "^5.3.3",
+    "brace": "^0.11.1",
     "dircompare": "file:",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-ace": "^13.0.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -25,6 +33,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11"
   }
 }
