--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "ace-diff": "^3.0.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "brace": "^0.11.1",
     "dircompare": "file:",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
+    "react-diff-view": "^3.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5"
